// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Chip Interactive Chips 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #f3eaff;
  color: black;
  border: 0.0625rem solid #7a2de5;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3:hover:not(:disabled) {
  background: #e7d6ff;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-3:active:not(:disabled) {
  background: #dbc1ff;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-4 {
  cursor: pointer;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #0f0f17;
  width: 0.875rem;
  height: 0.875rem;
}

.emotion-6 path {
  fill: #0f0f17;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: white;
  color: black;
  border: 0.0625rem solid #cfd7e5;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-7:hover:not(:disabled) {
  background: #f3f5f8;
}

.emotion-7:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-7:active:not(:disabled) {
  background: #dbc1ff;
}

.emotion-7:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-7>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background: #cfd7e5;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-3"
          data-testid="chip"
          disabled={false}
          role="button"
        >
          <div>
            Label
          </div>
          <div
            className="emotion-4"
          >
            <span
              className="emotion-5"
              data-testid="chip-delete"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-7"
          data-testid="chip"
          disabled={false}
          onClick={[Function]}
          role="button"
        >
          <div>
            Label
          </div>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-7"
          data-testid="chip"
          disabled={false}
          onClick={[Function]}
          role="button"
        >
          <div>
            Label
          </div>
          <div
            className="emotion-9"
            data-testid="badge"
          >
            5
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Read-Only Chips 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #ffe7f0;
  color: black;
  border: 0.0625rem solid #e51460;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3:hover:not(:disabled) {
  background: #ffd0e1;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: none;
}

.emotion-3>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-5>div {
  width: 1rem;
  height: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 0.875rem;
  letter-spacing: 0.00625rem;
}

.emotion-6 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-readonly="true"
          className="emotion-3"
          data-testid="chip"
        >
          <div>
            Label
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-readonly="true"
          className="emotion-3"
          data-testid="chip"
        >
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
              data-testid="chip_avatar"
            >
              KN
            </div>
          </div>
          <div>
            Label
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-readonly="true"
          className="emotion-3"
          data-testid="chip"
        >
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
              data-testid="chip_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/1.jpg"
              />
            </div>
          </div>
          <div>
            Label
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
